syntax = "proto3";

option csharp_namespace = "GrpcService";


service BChainService {
  rpc GetGenesis(EmptyRequest) returns (TrxResponse);
  rpc LastBlock(EmptyRequest)  returns (TrxResponse);
  rpc SendCoin(SendRequest)  returns (TrxResponse);
  rpc CreateBlock(EmptyRequest)  returns (TrxResponse);
  rpc GetBlocks(BlockRequest) returns (BlocksResponse);
  rpc GetBalance(AccountRequest) returns (BalanceResponse);
  rpc GetTransactions(AccountRequest) returns (TransactionsResponse);
}

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 result_per_page = 3; 
}

message SendRequest{
   string sender = 1;
   string recipient = 2;
   double amount = 3;
   float fee = 4;
}

message AccountRequest{
   string address = 1;
}

message BlockRequest{
  int32 page_number = 1;
  int32 result_per_page = 2; 
}

message BlocksResponse {
  repeated BlockModel blocks = 1;
}

message TransactionsResponse {
  repeated TrxModel transactions = 1;
}

message BalanceResponse {
  double balance = 1;
}

message TrxModel {
	int64 TimeStamp = 1;
	string Sender = 2;
	string Recipient = 3;
	double Amount = 4;
	float Fee = 5;
}

message BlockModel {
	int64 Height = 1;
	int64 TimeStamp = 2;
	string PrevHash = 3;
	string Hash = 4;
	string Transactions = 5;
}

message EmptyRequest {
}

message TrxResponse {
  string result = 1;
}
